Resolve wrong overflow of contributors on mobile

--- a/source/assets/stylesheets/components/_community.scss
+++ b/source/assets/stylesheets/components/_community.scss
@@ -150,6 +150,11 @@
 
 // Community contributors
 .community-contributors{
+  ul {
+    overflow: hidden;
+    position: relative;
+  }
+  
   ul li {
     margin: $spacer / 2;
     
